# azure_cheat_sheets

./: .coverage  .gitignore  .lycheeignore  .markdownlint-cli2.yaml  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  Azure-CheatSheet.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  vercel.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: lint.yml  prod-deploy.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
config/: orchestrator.yml
docs/: AZ-104_CheatSheet.md  AZ-305_CheatSheet.md  Azure-CheatSheet.md  index.md
docs/azure/cheat_sheets/: AZ-104.md  AZ-305.md
docs/cheat_sheets/: AZ-104.md  AZ-305.md
docs/compute/: compute.md
docs/diagrams/compute/: availability-decision-flow.mmd  az104-vm-family-decision-flow.mmd  az305-azure-cache-for-redis.mmd  az305-azure-container-apps-vs-aks-vs-aci.mmd  az305-runtime-language-fit-functions-vs-logic-apps-vs-app-service.mmd  az305-serverless-event-driven-selection.mmd
docs/diagrams/governance/: az104-policy-assignment-scope-hierarchy.mmd  az305-governance-enforcement-decision-flow.mmd  az305-management-hierarchy.mmd
docs/diagrams/ha-dr/: az305-key-concepts.mmd  recovery-services-vault-structure.mmd
docs/diagrams/identity/: az104-entra-id-join-type-decision-flow.mmd  rbac-role-assignment-decision-flow.mmd  system-identity-type-decision-flow.mmd
docs/diagrams/messaging/: messaging-decision-flow.mmd  service-bus-sku-decision-flow.mmd
docs/diagrams/monitoring/: agent-selection-decision-flow.mmd  az104-diagnostic-settings-routing.mmd  az305-azure-monitor-ecosystem.mmd
docs/diagrams/networking/: az104-load-balancer-sku-decision-flow.mmd  az104-vnet-connectivity-decision-flow.mmd  az305-decision-flow-api-gateway-selection.mmd  az305-decision-flow-network-security-selection.mmd  decision-flow.mmd  nsg-rule-evaluation.mmd
docs/diagrams/security/: az104-key-vault-access-decision-flow.mmd
docs/diagrams/storage/: az104-managed-disk-selection.mmd  az104-storage-replication-decision-flow.mmd  az305-storage-redundancy.mmd  blob-storage-access-tiers.mmd
docs/governance/: governance.md
docs/ha-dr/: ha-dr.md
docs/identity/: identity.md
docs/messaging/: messaging.md
docs/monitoring/: monitoring.md
docs/networking/: networking.md
docs/security/: security.md
docs/storage/: storage.md
docs/waf/: waf.md
scripts/: extract_sections.py  update_cheat_sheets.py  validate_mermaid.py
tests/: conftest.py  test_audit.py  test_dependencies.py  test_exam_sections.py  test_issue_134_az500.py  test_issue_153_related_concepts.py  test_issue_194_az305_quick_index.py  test_issue_195_pin_dev_deps.py  test_issue_196_governance_decision_flow.py  test_issue_203_pip_audit.py  test_issue_213_exam_sections.py  test_issue_213_migration_scripts.py  test_issue_219_aws_section.py  test_issue_222_storage_account_types_replication.py  test_issue_227.py  test_issue_228.py  test_issue_232.py  test_issue_233.py  test_issue_234.py  test_issue_az700_quick_index.py  test_mermaid_validation.py  test_validate_mermaid.py
tests/aws/: test_abbreviations_nav.py  test_aws_content.py  test_exam_coverage.py
tests/azure/: test_abbreviations_nav.py  test_az204_content.py  test_az500_content.py  test_exam_coverage.py  test_governance_flow.py  test_monitoring_concepts.py  test_storage_replication.py  test_vm_families.py
(+81 files in other folders)
