[project]
name = "azure-cheat-sheets"
version = "0.1.0"

[tool.setuptools]
# No Python packages to distribute — this repo is scripts + tests only.
# Explicit empty list prevents setuptools flat-layout discovery from
# mis-identifying config/, openspec/, or node_modules/ as packages.
packages = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.15.15,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["scripts"]

[tool.coverage.report]
fail_under = 90
