[project]
name = "tech-cheat-sheets-and-notes"
version = "0.1.0"

[tool.setuptools]
# No Python packages to distribute — this repo is scripts + tests only.
# Explicit empty list prevents setuptools flat-layout discovery from
# mis-identifying config/, openspec/, or node_modules/ as packages.
packages = []

[project.optional-dependencies]
dev = [
    "mkdocs-material>=9.7.6,<10",
    "pip-audit>=2.10.0,<3",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.15.16,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
# extract_sections.py contains a rename-mapping dict whose string keys/values
# exceed 100 chars; these cannot be reformatted without losing readability.
"scripts/extract_sections.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["scripts"]
# Migration scripts are one-shot utilities — run once to produce the current
# repo state and not re-executed during CI. Exclude them from coverage measurement.
omit = [
    "scripts/extract_sections.py",
    "scripts/update_cheat_sheets.py",
]

[tool.coverage.report]
fail_under = 90

[tool.pytest.ini_options]
# Add tests/ to sys.path so test modules can import shared helpers from conftest.
pythonpath = ["tests"]
